tests/ui/pattern/deref-patterns/usefulness/mixed-constructors.stderr
error: mix of deref patterns and normal constructors
  --> $DIR/mixed-constructors.rs:15:9
   |
LL |         false => {}
   |         ^^^^^ matches on the result of dereferencing `Cow<'_, bool>`
LL |         Cow::Borrowed(_) => {}
   |         ^^^^^^^^^^^^^^^^ matches directly on `Cow<'_, bool>`

error: mix of deref patterns and normal constructors
  --> $DIR/mixed-constructors.rs:21:9
   |
LL |         Cow::Borrowed(_) => {}
   |         ^^^^^^^^^^^^^^^^ matches directly on `Cow<'_, bool>`
LL |         true => {}
   |         ^^^^ matches on the result of dereferencing `Cow<'_, bool>`

error: mix of deref patterns and normal constructors
  --> $DIR/mixed-constructors.rs:28:9
   |
LL |         Cow::Owned(_) => {}
   |         ^^^^^^^^^^^^^ matches directly on `Cow<'_, bool>`
LL |         false => {}
   |         ^^^^^ matches on the result of dereferencing `Cow<'_, bool>`

error: mix of deref patterns and normal constructors
  --> $DIR/mixed-constructors.rs:35:10
   |
LL |         (Cow::Borrowed(_), 0) => {}
   |          ^^^^^^^^^^^^^^^^ matches directly on `Cow<'_, bool>`
LL |         (true, 0) => {}
   |          ^^^^ matches on the result of dereferencing `Cow<'_, bool>`

error: mix of deref patterns and normal constructors
  --> $DIR/mixed-constructors.rs:42:13
   |
LL |         (0, Cow::Borrowed(_)) => {}
   |             ^^^^^^^^^^^^^^^^ matches directly on `Cow<'_, bool>`
LL |         _ => {}
LL |         (1, true) => {}
   |             ^^^^ matches on the result of dereferencing `Cow<'_, bool>`

error: aborting due to 5 previous errors

